perf(exp-mk3): validate calculation memory on Java 21
Repeat production, allocation, publication, retention, and baseline gates on the deployment JVM. Document the measured latency exception and the host limitation for hardware branch counters.

Closes #147